<resources>
    <string name="app_name">TMgank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_android">Android</string>
    <string name="title_activity_test">test</string>

    <string name="menu_copy">复制链接</string>
    <string name="menu_open">在浏览器中打开</string>
    <string name="menu_collect">收藏</string>
    <string name="success_copy">链接已复制到剪贴板</string>

    <string name="already_collect">已经收藏过了</string>
    <string name="failure_collect">收藏失败</string>
    <string name="success_collect">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="failure_uncollect">取消收藏失败</string>
    <string name="success_uncollect">取消收藏成功</string>
    <string name="option">操作</string>
    <string name="nav_type">资源分类</string>
    <string name="random">随便看看</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="info">关于</string>
    <string name="title_activity_tab">TabActivity</string>

    <array name="classify">

        <item>ANDROID</item>
        <item>IOS</item>
        <item>瞎推荐</item>
        <item>拓展资源</item>
        <item>福利</item>
        <item>休息视频</item>

    </array>


    <string name="ios" translatable="false">IOS</string>
    <string name="android" translatable="false">ANDROID</string>
    <string name="recommend" translatable="false">瞎推荐</string>
    <string name="resource" translatable="false">拓展资源</string>
    <string name="welfare" translatable="false">福利</string>
    <string name="video" translatable="false">休息视频</string>
    <string name="text_error">加载干货失败。。。点击重新加载</string>
    <string name="test_title">标题，，，</string>
    <string name="test_user">hahah</string>
    <string name="test_time">2015/10/18</string>
    <string name="confirm">确定</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_base">基本</string>

   <!-- 设置页面-->
    <string name="light">亮主题</string>
    <string name="dark">暗主题</string>
    <string name="key_theme">key_theme</string>
    <string name="setting_theme">主题</string>
    <string name="key_open">Key_open</string>
    <string name="summary_on_open">内置浏览器</string>
    <string name="summary_off_open">系统浏览器</string>
    <string name="title_open">内置浏览器</string>
    <string name="title_option">操作</string>
    <string name="key_clear">key_clear</string>
    <string name="summary_clear">缓存清理</string>

    <string-array name="pref_theme_list_entries">
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>light</item>
        <item>dark</item>
    </string-array>


</resources>
