<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/type"
                    android:icon="@drawable/information"
                    android:title="@string/nav_type" />
               <!-- <item
                    android:id="@+id/random"
                    android:icon="@drawable/random"
                    android:title="@string/random" />-->
                <item
                    android:id="@+id/collect"
                    android:icon="@drawable/collection"
                    android:title="@string/collect" />
            </group>
        </menu>
    </item>

    <item android:title="@string/option">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/info"
                android:icon="@drawable/about"
                android:title="@string/info" />
        </menu>
    </item>

</menu>